--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <div class="win-message">
+        <span>You won </span><span id="winCount">0</span> times
+    </div>
 </body>
 </html>
